# vervis

./: AUTHORS  CHANGELOG.md  COPYING  FEDERATION.md  INSTALL.md  README.md  _boring  bindist.sh  flake.nix  stack.yaml  update-deps.sh  vervis.cabal
app/: DevelMain.hs  devel.hs  main.hs
config/: keter.yml  models  routes  settings-default.yaml  test-settings.yml
hook-darcs/: main.hs
hook-git/: main.hs
lib/darcs-lights/: CHANGELOG.md  darcs-lights.cabal  default.nix
lib/darcs-lights/src/Control/Applicative/: Local.hs
lib/darcs-lights/src/Data/Attoparsec/ByteString/: Local.hs
lib/darcs-lights/src/Data/ByteString/: Local.hs
lib/darcs-lights/src/Data/Text/UTF8/: Local.hs
lib/darcs-lights/src/Development/Darcs/Internal/: Patch.hs
lib/darcs-lights/src/Development/Darcs/Internal/Hash/: Codec.hs  Types.hs
lib/darcs-lights/src/Development/Darcs/Internal/Inventory/: Parser.hs  Read.hs  Types.hs
lib/darcs-lights/src/Development/Darcs/Internal/Patch/: Parser.hs  Types.hs
lib/darcs-rev/: CHANGELOG.md  darcs-rev.cabal  default.nix  stack.yaml
lib/darcs-rev/src/Development/Darcs/: Rev.hs
lib/dvara/: CHANGELOG.md  _boring  default.nix  dvara.cabal  stack.yaml
lib/dvara/src/: Dvara.hs
lib/dvara/src/Dvara/: Class.hs  Field.hs  Foundation.hs  Handler.hs  Migration.hs  Model.hs  Types.hs
lib/dvara/src/Dvara/Migration/: Model.hs
lib/dvara/src/Dvara/Model/: TH.hs
lib/hit-graph/: CHANGELOG.md  README.md  _boring  hit-graph.cabal  stack.yaml
lib/hit-graph/src/Data/Git/: Graph.hs
lib/hit-graph/src/Data/Graph/Inductive/Query/: Topsort.hs
lib/hit-harder/: CHANGELOG.md  README.md  _boring  default.nix  hit-harder.cabal  stack.yaml
lib/hit-harder/src/Data/Git/: Harder.hs
lib/hit-harder/src/Data/Git/Harder/: Pack.hs
lib/hit-network/: CHANGELOG.md  README.md  default.nix  hit-network.cabal  stack.yaml
lib/hit-network/src/Control/Monad/Trans/: Git.hs  Stream.hs
lib/hit-network/src/Data/Binary/Get/: Local.hs
lib/hit-network/src/Data/Binary/Put/: Local.hs
lib/hit-network/src/Data/Git/: Local.hs
lib/hit-network/src/Network/Git/: Get.hs  Put.hs  Types.hs
lib/hit-network/src/Network/Git/Transport/HTTP/Fetch/: RefDiscovery.hs  UploadHaves.hs  UploadRequest.hs
lib/hit-network/src/Network/Git/Transport/SSH/: Fetch.hs
lib/hit-network/src/Network/Git/Transport/SSH/Fetch/: Ack.hs  Monad.hs  Packfile.hs  RefDiscovery.hs  ShallowUpdate.hs  UploadRequest.hs
lib/http-client-signature/: CHANGELOG.md  default.nix  http-client-signature.cabal  stack.yaml
lib/http-client-signature/src/Network/HTTP/Client/: Signature.hs
lib/http-client-signature/test/: Test.hs
lib/http-signature/: AUTHORS.md  CHANGELOG.md  README.md  _boring  default.nix  http-signature.cabal  stack.yaml
lib/http-signature/src/Network/HTTP/: Signature.hs
lib/http-signature/test/: Test.hs
lib/persistent-email-address/: CHANGELOG.md  default.nix  persistent-email-address.cabal
lib/persistent-email-address/src/Database/Persist/: EmailAddress.hs
lib/persistent-graph/: CHANGELOG.md  default.nix  persistent-graph.cabal
lib/persistent-graph/src/Database/Persist/Graph/: Class.hs  SQL.hs
lib/persistent-graph/src/Database/Persist/Local/: Sql.hs
lib/persistent-graph/src/Database/Persist/Local/Class/: PersistEntityGraph.hs  PersistQueryForest.hs  PersistQueryGraph.hs
lib/persistent-graph/src/Database/Persist/Local/Sql/Orphan/: Common.hs  PersistQueryForest.hs
lib/persistent-graph/src/Database/Persist/Sql/Graph/: Connects.hs  Cyclic.hs  Path.hs  Reachable.hs  TransitiveReduction.hs
lib/persistent-migration/: ChangeLog.md  INSTALL.md  NEWS.md  README.md  default.nix  persistent-migration.cabal
lib/persistent-migration/src/Data/Proxy/: Local.hs
lib/persistent-migration/src/Database/Persist/: BackendDataType.hs  Migration.hs  Schema.hs
lib/persistent-migration/src/Database/Persist/Migration/: Actions.hs
lib/persistent-migration/src/Database/Persist/Schema/: Parser.hs  PostgreSQL.hs  SQL.hs  TH.hs  Types.hs  Validate.hs
lib/persistent-migration/src/Database/Persist/Schema/SQL/: Internal.hs
lib/ssh/: .boring  default.nix  ssh.cabal  stack.yaml
lib/ssh/src/Network/: SSH.hs
lib/ssh/src/Network/SSH/: Channel.hs  Crypto.hs  Session.hs
lib/ssh/src/Network/SSH/Internal/: Channel.hs  Crypto.hs  Debug.hs  NetGet.hs  NetPut.hs  Random.hs  Sender.hs  Session.hs  Util.hs
lib/ssh/test/: test.hs
lib/time-interval-aeson/: CHANGELOG.md  default.nix  stack.yaml  time-interval-aeson.cabal
lib/time-interval-aeson/src/Data/Time/Interval/: Aeson.hs
lib/yesod-http-signature/: CHANGELOG.md  default.nix  stack.yaml  yesod-http-signature.cabal
lib/yesod-http-signature/src/Yesod/: HttpSignature.hs
lib/yesod-http-signature/test/: Test.hs
lib/yesod-mail-send/: CHANGELOG.md  README.md  default.nix  stack.yaml  yesod-mail-send.cabal
lib/yesod-mail-send/src/Yesod/Mail/: Send.hs
migrations/: 2016_08_04.model  2016_09_01_just_workflow.model  2016_09_01_just_workflow_prepare.model  2016_09_01_rest.model  2019_01_28_project_collabs.model  2019_02_03_verifkey.model  2019_03_18_message.model  2019_03_19.model  2019_03_30.model  2019_03_30_follower_set.model  2019_04_11.model  2019_04_12.model  2019_04_22.model  2019_05_03.model  2019_05_17.model  2019_05_24.model  2019_06_02.model  2019_06_03.model  2019_06_06.model  2019_06_06_mig.model  2019_06_07.model  2019_06_09.model  2019_06_09_fill.model  2019_06_10.model  2019_06_12.model  2019_06_15.model  2019_06_16.model  2019_06_24.model  2019_07_11.model  2019_09_06.model  2019_09_10.model  2019_09_25.model  2019_11_04.model  2019_11_04_remote_activity_ident.model  2019_11_05_remote_actor_ident.model  2020_01_05.model  2020_02_05_local_ticket.model  2020_02_05_mig.model  2020_02_06_tal_point_to_lt.model  2020_02_07_tpl.model  (+26 more)
src/: GitPackProto.hs
src/Crypto/: PublicVerifKey.hs
src/Data/: KeyFile.hs  MediaType.hs
templates/: default-layout-wrapper.hamlet  default-layout.cassius  default-layout.hamlet  homepage.hamlet  password-field.hamlet  people.hamlet  person-new.hamlet  person.hamlet  personal-overview.hamlet  wiki.hamlet
(+260 files in other folders)
