name:                darcs-rev
version:             0.1
synopsis:            Compile Darcs revision info into your project
description:
  Template Haskell splices for including information about the current version
  control status of your project (hash of the last patch, time of last patch,
  total number of patches, etc.) in the code of your project. Useful for
  including in panic messages, @--version@ output, version information in GUI
  desktop apps and mobile apps and websites, or diagnostic info for more
  informative bug reports.
homepage:            https://dev.angeley.es/s/fr33domlover/r/darcs-rev
bug-reports:         https://dev.angeley.es/s/fr33domlover/p/vervis/t
license:             PublicDomain
license-file:        COPYING
author:              fr33domlover
maintainer:          fr33domlover@riseup.net
copyright:           ♡ Copying is an act of love. Please copy, reuse and share.
category:            Development, Darcs
build-type:          Simple
extra-source-files:
  AUTHORS.md
  CHANGELOG.md
  COPYING
  README.md
cabal-version:       >=1.10

source-repository head
  type:                darcs
  location:            https://dev.angeley.es/s/fr33domlover/r/darcs-rev

library
  exposed-modules:     Development.Darcs.Rev
  build-depends:       base
                     , bytestring
                     , darcs-lights
                     , template-haskell
                     , text
                     , time
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
