name:                hit-harder
version:             0.1
synopsis:            More Git tools in pure Haskell on top of 'git'
description:
  During my work on a Haskell implementation of the Git pack protocol, which is
  still in progress at the time of writing, I've been writing various general
  purpose utilities. At the beginning I just dumped them into Util modules, but
  at some point the collection of utils felt too useful to be kept like that,
  and I decided to create a separate package for them.
homepage:            https://dev.angeley.es/s/fr33domlover/p/vervis
bug-reports:         https://dev.angeley.es/s/fr33domlover/p/vervis/t
license:             PublicDomain
license-file:        COPYING
author:              fr33domlover
maintainer:          fr33domlover@riseup.net
copyright:           ♡ Copying is an act of love. Please copy, reuse and share.
category:            Git, Development
build-type:          Simple
extra-source-files:  AUTHORS.md
                     CHANGELOG.md
                     COPYING
                     README.md
cabal-version:       >=1.10

source-repository head
  type:                darcs
  location:            https://dev.angeley.es/s/fr33domlover/r/hit-harder

library
  exposed-modules:     Data.Git.Harder
                     , Data.Git.Harder.Pack
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base                 >= 4.8 && < 5
                     , binary
                     , bytestring
                     , containers
                     , cryptonite
                     , hashable
                     , git
                     , memory
                     , monad-hash
                     , unordered-containers
                     , zlib
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
